# python-practice-combined

./: .gitIgnore  README.md  pyproject.toml  test_output.md
chroma_db_path/: chroma_db_text.txt
code/business_discovery/: main.py
code/business_discovery/tools/web_search_tool/: web_search_tool.py
docker/: docker-compose.yml
docker/localaws/: ministack-compose.yaml
docker/searxng/: settings.yml
env/: .env.dist
fast_api_ver/: app.py
fast_api_ver/api/model/: async_model.py
fast_api_ver/api/v1/: v1_api_router.py
http/: fast-api.http
notebooks/: markdown_handle_script.py  open-ai.ipynb  test-code.py.ipynb
notebooks/aws/: prac.ipynb
notebooks/eddoner-llm-engg/: day2.ollama.ipynb  embedding.ipynb  open-ai.ipynb
src/: auth_service.py  test.py
src/business_discovery/: main.py
src/business_discovery/agents/: llm_agents.py  scope_check_agent.py
src/business_discovery/prompts/: search_query_genarator.py
src/business_discovery/states/: business_discovery_agent_state.py
src/business_discovery/tools/: tools_package.py
src/business_discovery/tools/search_query_generator/: query_generator_tool.py
src/business_discovery/tools/web_search_tool/: web_search_tool.py
test_cases/: test_auth_service.py
