[project]
name = "python-practice-combined"
version = "0.1.0"
description = ""
authors = [
    {name = "VijayKumar",email = "vijayarya326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.33.1,<3.0.0)",
    "langchain-core (>=1.3.3,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langgraph (>=1.2.0,<2.0.0)",
    "gradio (>=6.14.0,<7.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "resend (>=2.30.1,<3.0.0)",
    "mailersend (>=2.0.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
