[project]
name = "python-practice-combined"
version = "0.1.0"
description = ""
authors = [
    {name = "VijayKumar",email = "vijayarya326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "resend (>=2.30.1,<3.0.0)",
    "pyjwt (==2.0.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
     "pytest (>=9.0.3,<10.0.0)",
]
