[project]
name = "python-practice-combined"
version = "0.1.0"
description = ""
authors = [
    {name = "VijayKumar",email = "vijayarya326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "resend (>=2.30.1,<3.0.0)",
    "pyjwt (==2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.34.2,<3.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "pypdf (>=6.13.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
     "pytest (>=9.0.3,<10.0.0)",
]
